--- a/article/2022-02-26.md
+++ b/article/2022-02-26.md
@@ -11,7 +11,7 @@
 
 > 吃完饭就来这边了，看了一下地图发现离医院不远，想看一下能否再包一些药（痤疮）,发现周六的已经没有号了，周末人都比较多。还有一个是来这边医疗保障局报销一下元旦那天因为受凉发烧的费用，因为那天医保系统用不了只能自费。。。
 > 到这边说我这个业务只能周一到周五 09:00-11:00 14:00-17:00 才可以，还给了我一个明细单，准备好带着就行。
-![医保报销明细单](/image/2022-02/26-医保报销明细单.jpg)
+![医保报销明细单](https://raw.githubusercontent.com/zhumengyangi/life/zhumengyang/image/2022-02/26-%E5%8C%BB%E4%BF%9D%E6%8A%A5%E9%94%80%E6%98%8E%E7%BB%86%E5%8D%95.jpg)
 
 > 医院、医疗保障局、青浦博物馆、青浦图书馆都在一块转着就来到这了这边
 > 本来还郁闷这不是图书馆么，怎么是博物馆了。
