--- a/article/2022-02-26.md
+++ b/article/2022-02-26.md
@@ -7,7 +7,7 @@
 ![生菜土豆炒饭](image/2022-02/26-生菜土豆炒饭.jpg)
 
 > 这是今天的午饭，再陪着之前一点剩面条
-![西葫芦老干妈炒鸡蛋](/image/2022-02/26-西葫芦老干妈炒鸡蛋.jpg)
+<img src="image/2022-02/26-西葫芦老干妈炒鸡蛋.jpg" alt="西葫芦老干妈炒鸡蛋" width="100" height="30" align="bottom" />
 
 > 吃完饭就来这边了，看了一下地图发现离医院不远，想看一下能否再包一些药（痤疮）,发现周六的已经没有号了，周末人都比较多。还有一个是来这边医疗保障局报销一下元旦那天因为受凉发烧的费用，因为那天医保系统用不了只能自费。。。
 > 到这边说我这个业务只能周一到周五 09:00-11:00 14:00-17:00 才可以，还给了我一个明细单，准备好带着就行。
